--- a/style.css
+++ b/style.css
@@ -2,3 +2,15 @@
     margin: 0px;
     padding: 0px;
 }
+
+h1, h2 {
+    color: red;
+}
+
+h3, h4 {
+    color: yellow;
+}
+
+h5, h6 {
+    color: green;
+}
